--- a/VirtualCourses/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/VirtualCourses/Views/Storyboards/Base.lproj/Main.storyboard
@@ -160,6 +160,11 @@
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="20" maxY="0.0"/>
                                 </collectionViewFlowLayout>
+                                <activityIndicatorView key="backgroundView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" id="azM-vy-mRD">
+                                    <rect key="frame" x="0.0" y="0.0" width="374" height="655"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="color" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </activityIndicatorView>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CourseCollectionViewCell" id="pFj-fR-6xb" customClass="CourseCollectionViewCell" customModule="VirtualCourses" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="52.666666666666664" width="250" height="550"/>
@@ -247,6 +252,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="fuQ-L9-Gvu"/>
                     <connections>
+                        <outlet property="Spinner" destination="azM-vy-mRD" id="pnH-fq-nQ9"/>
                         <outlet property="collectionView" destination="G94-ZX-bQq" id="4CR-UK-cTL"/>
                         <outlet property="greetLabel" destination="i7d-rf-BC7" id="RYH-c7-Yil"/>
                     </connections>
